# LRE

./: README.md  main.py  pyproject.toml  requirements.txt  setup.ipynb
demo/: attribute_lens_adjective antonym.html  attribute_lens_adjective comparative.html  attribute_lens_adjective superlative.html  attribute_lens_country capital city.html  attribute_lens_country currency.html  attribute_lens_country language.html  attribute_lens_country largest city.html  attribute_lens_linguistic.ipynb  attribute_lens_verb past tense.html  attribute_lens_word first letter.html  attribute_lens_word last letter.html  demo.ipynb  logit_lens.html  logit_lens_adjective.html  logit_lens_verb.html  logit_lens_word.html
notebooks/: attributelens.ipynb  editing.ipynb  representation_editing_low_rank.ipynb
notebooks/figures/: causality_ori.ipynb  fig3.ipynb  fig4_faithfulness.ipynb  fig5_causality.ipynb  fig6_fc_correlation.ipynb
scripts/: evaluate.py  knowns.py  sweep.py  sweep_full_rank.py  sweep_n_icl.py  sweep_prompt.py
scripts/baselines/: efficacy_baselines.py  faithfulness_baselines.py  translation_baseline.py
scripts/caching/: explain_beta.py
src/: models.py
src/utils/: sweep_utils.py
