[project]
name = "lre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "baukit",
    "dataclasses-json>=0.6.7",
    "huggingface-hub>=1.11.0",
    "invoke>=3.0.3",
    "jupyter>=1.1.1",
    "jupyter-http-over-ws>=0.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "protobuf==3.20.0",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    ".*tests.*",
    # Will clean these up later.
    "src/corner.py",
]

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY"
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "types-requests>=2.33.0.20260408",
]
